Bug 1189736 - Port Bug 1189156 [Don't use enumeration style in hash table SizeOf*() functions ] to comm-central r=jcranmer f=IanN a=bustage fix CLOSED TREE